--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -39,12 +39,12 @@ display_name_available_status=I lirë
 unable_retrieve_url=Na ndjeni, nuk qemë në gjendje të marrim një url thirrjeje.
 session_expired_error_description=Sesioni skadoi. Krejt URL-të që keni krijuar dhe ndarë me të tjerët më parë nuk do të funksionojnë më.
 could_not_authenticate=Nuk u Bë Dot Mirëfilltësimi
-password_changed_question=E ndryshuar fjalëkalimin tuaj?
+password_changed_question=Ndryshuat gjë fjalëkalimin tuaj?
 try_again_later=Ju lutemi, riprovoni më vonë
 could_not_connect=Nuk u Lidh Dot Me Shërbyesin
 check_internet_connection=Ju lutemi, kontrolloni lidhjen tuaj në internet
 login_expired=Hyrja Juaj Ka Skaduar
-service_not_available=Shërbim i Pakapshëm Në Këtë Kohë
+service_not_available=Shërbim i Pakapshëm Tani Për Tani
 problem_accessing_account=Pati Një Problem Me Hyrjen Në Llogarinë Tuaj
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
@@ -115,7 +115,7 @@ import_failed_description_simple=Na ndjeni, importimi i kontaktit dështoi
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Na ndjeni, importimi i kontaktit dështoi, ju lutemi, për ndihmë shihni  {{import_failed_support_link_label}}
+import_failed_description=Na ndjeni, importimi i kontaktit dështoi, ju lutemi, për ndihmë shihni te {{import_failed_support_link_label}}
 import_failed_support_link_label=sajt asistence
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
@@ -207,7 +207,7 @@ call_progress_connecting_description=Po lidhet…
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
 call_progress_ringing_description=Po i bihet ziles…
 
-peer_ended_conversation2=Personi që po thirrej e përfundoi bashkëbisedimin.
+peer_ended_conversation2=Personi që po thirrej i dha fund bashkëbisedimit.
 conversation_has_ended=Bashkëbisedimi juaj përfundoi.
 restart_call=Rihyni
 
