--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -212,7 +212,7 @@ conversation_has_ended=Bashkëbisedimi juaj përfundoi.
 restart_call=Rihyni
 
 generic_failure_title=Diç shkoi ters.
-generic_failure_with_reason2=Mund të riprovoni ose të dërgoni me email një lidhje që të lidheni më vonë.
+generic_failure_with_reason2=Mund të riprovoni, ose të dërgoni me email një lidhje që të lidheni më vonë.
 generic_failure_no_reason2=Do të donit të riprovohej?
 
 ## LOCALIZATION NOTE (contact_offline_title): Title for
