Bug 1031019: add "Apps" toolbar button that points to Marketplace

--- a/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,11 @@ quit-button.tooltiptext.linux2 = %1$S afsluiten (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = %1$S afsluiten (%2$S)
 
+loop-call-button.label = Iemand uitnodigen voor een gesprek
+loop-call-button.tooltiptext = Iemand uitnodigen voor een gesprek
+
 panic-button.label = Vergeten
 panic-button.tooltiptext = Bepaalde navigatiegeschiedenis vergeten
 
-loop-call-button.label = Iemand uitnodigen voor een gesprek
-loop-call-button.tooltiptext = Iemand uitnodigen voor een gesprek
+web-apps-button.label = Apps
+web-apps-button.tooltiptext = Apps ontdekken
