Bug 1079430 - Land the new Loop strings for Firefox 35. r=Standard8

--- a/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,8 @@ quit-button.tooltiptext.linux2 = %1$S afsluiten (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = %1$S afsluiten (%2$S)
 
-loop-call-button.label = Iemand uitnodigen voor een gesprek
-loop-call-button.tooltiptext = Iemand uitnodigen voor een gesprek
+loop-call-button2.label = Een gesprek beginnen
+loop-call-button2.tooltiptext = Een gesprek beginnen
 
 panic-button.label = Vergeten
 panic-button.tooltiptext = Bepaalde navigatiegeschiedenis vergeten
