--- a/nl/browser/chrome/browser/loop/loop.properties
+++ b/nl/browser/chrome/browser/loop/loop.properties
@@ -4,7 +4,17 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Neem deel aan het gesprek
+first_time_experience_button_label=Beginnen
+
 share_link_header_text=Deze koppeling delen om iemand uit te nodigen voor een gesprek:
+invite_header_text=Iemand uitnodigen om met u deel te nemen
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -52,12 +62,15 @@ problem_accessing_account=Er was een probleem bij het benaderen van uw account
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Opnieuw proberen
 
-share_email_subject3=U bent uitgenodigd voor een gesprek
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+share_email_subject4={{clientShortname}} — Neem deel aan het gesprek
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Kopieer of klik op deze koppeling om de uitnodiging te accepteren en uw gesprek te beginnen:\r\n\r\n{{callUrl}}
+share_email_body4=Hallo!\r\n\r\nStart met me een videogesprek via {{clientShortname}}:\r\n\r\nU hoeft niks te downloaden of te installeren. Kopieeer en plak deze URL in uw browser:\r\n\r\n{{callUrl}}\r\n\r\nAls u wilt kunt u meer informatie krijgen over {{clientShortname}} op {{learnMoreUrl}}\r\n\r\nSpreek u snel!
+
 share_button=E-mail
+share_button2=Koppeling e-mailen
 copy_url_button=Kopiëren
+copy_url_button2=Koppeling kopiëren
 copied_url_button=Gekopieerd!
 
 panel_footer_signin_or_signup_link=Aanmelden of inschrijven
@@ -238,12 +251,17 @@ connection_error_see_console_notification=Gesprek mislukt; zie console voor deta
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3=Door {{clientShortname}} te gebruiken gaat u akkoord met de {{terms_of_use}} \
   en {{privacy_notice}}.
 legal_text_tos = Gebruiksvoorwaarden
 legal_text_privacy = Privacyverklaring
-client_shortname_fallback=dit product
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_beforeLogo=Mogelijk gemaakt door 
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Hoe was uw gesprek?
 feedback_what_makes_you_sad=Wat maakt u droevig?
@@ -268,3 +286,27 @@ feedback_rejoin_button=Terugkeren
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Gebruiker rapporteren
+
+help_label=Help
+tour_label=Tour
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Gesprek {{conversationLabel}}
+rooms_leave_button_label=Verlaten
+rooms_list_copy_url_tooltip=Koppeling kopiëren
+## LOCALIZATION NOTE (rooms_list_current_conversations): We prefer to have no
+## number in the string, but if you need it for your language please use {{num}}.
+rooms_list_current_conversations=Lopende gesprekken;Lopende gesprekkken
+rooms_list_delete_tooltip=Gesprek verwijderen
+rooms_list_deleteConfirmation_label=Weet u het zeker?
+rooms_list_no_current_conversations=Geen lopende gesprekken
+rooms_name_this_room_label=Geef dit gesprek een naam
+rooms_new_room_button_label=Gesprek starten
+rooms_only_occupant_label=U bent de eerste.
+rooms_panel_title=Kies een gesprek of start een nieuwe
+rooms_room_full_label=Er zijn al twee personen in dit gesprek.
+rooms_room_full_call_to_action_nonFx_label={{brandShortname}} downloaden om ook te starten
+rooms_room_full_call_to_action_label=Meer info over {{clientShortname}} »
+rooms_room_joined_label=Iemand neem deel aan het gesprek!
+rooms_room_join_label=Neem deel aan het gesprek
