--- a/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -100,6 +100,9 @@ quit-button.tooltiptext.mac = %1$S afsluiten (%2$S)
 loop-call-button2.label = Een gesprek beginnen
 loop-call-button2.tooltiptext = Een gesprek beginnen
 
+social-share-button.label = Deze pagina delen
+social-share-button.tooltiptext = Deze pagina delen
+
 panic-button.label = Vergeten
 panic-button.tooltiptext = Bepaalde navigatiegeschiedenis vergeten
 
