--- a/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -108,3 +108,8 @@ panic-button.tooltiptext = Bepaalde navigatiegeschiedenis vergeten
 
 web-apps-button.label = Apps
 web-apps-button.tooltiptext = Apps ontdekken
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = WebIDE openen
