[S] browser:  Bug 1086958: re-add default browser strings from bug 951627

--- a/it/browser/chrome/browser/shellservice.properties
+++ b/it/browser/chrome/browser/shellservice.properties
@@ -13,6 +13,9 @@ setDefaultBrowserNotNow.label = Non adesso
 setDefaultBrowserNotNow.accesskey = N
 setDefaultBrowserNever.label = Non chiedere nuovamente
 setDefaultBrowserNever.accesskey = c
+setDefaultBrowserTitle = Browser predefinito
+setDefaultBrowserMessage = %S non è attualmente impostato come browser predefinito. Impostarlo ora?
+setDefaultBrowserDontAsk = Verifica sempre all’avvio di %S.
 desktopBackgroundLeafNameWin = Sfondo del desktop.bmp
 DesktopBackgroundDownloading = Salvataggio immagine…
 DesktopBackgroundSet = Imposta sfondo del desktop
