--- a/sq/dom/chrome/security/csp.properties
+++ b/sq/dom/chrome/security/csp.properties
@@ -51,7 +51,7 @@ couldntParseScheme = Nuk u përtyp dot skema te %1$S
 couldntParsePort = Nuk u përtyp dot porta te %1$S
 # LOCALIZATION NOTE (duplicateDirective):
 # %1$S is the name of the duplicate directive
-duplicateDirective = U kapën udhëzime %1$S të përsëritura.  Hiq të parin, krejt të tjerët do të shpërfillen.
+duplicateDirective = U kapën udhëzime %1$S të përsëdytura.  Hiq të parin, krejt të tjerët do të shpërfillen.
 # LOCALIZATION NOTE (ignoringUnknownOption):
 # %1$S is the option that could not be understood
 ignoringUnknownOption = Po shpërfillet mundësia e panjohur %1$S
