--- a/sq/editor/ui/chrome/composer/editor.properties
+++ b/sq/editor/ui/chrome/composer/editor.properties
@@ -182,7 +182,7 @@ XulKeyMac=Cmd+
 Del=Del
 Delete=Fshije
 DeleteCells=Fshi Kuti
-DeleteTableTitle=Fshi Rreshta ose Shtylla
+DeleteTableTitle=Fshini Rreshta ose Shtylla
 DeleteTableMsg=Zvogëlimi i numrit të rreshtave ose shtyllave do të fshijë kuti tabele dhe lëndën e tyre. Doni vërtet të bëni këtë?
 Clear=Pastro
 #Mouse actions
