--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -29,7 +29,7 @@ alertSearchEngineAddedToast='%S' u shtua si motor kërkimesh
 alertSearchEngineErrorToast=S'u shtua dot '%S' si motor kërkimesh
 alertSearchEngineDuplicateToast='%S' është tashmë një nga motorët tuaj të kërkimeve
 
-downloadCancelPromptTitle=Anuloje Shkarkimin
+downloadCancelPromptTitle=Anulojeni Shkarkimin
 downloadCancelPromptMessage=Doni të anulohet ky shkarkim?
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
@@ -226,7 +226,7 @@ timer.start=%S: kohëmatësi filloi
 timer.end=%1$S: %2$Sms
 
 # Webapps
-webapps.installTitle=Instaloje Zbatimin
+webapps.installTitle=Instalojeni Zbatimin
 webapps.alertSuccess=U instalua me sukses
 # Shown when there is a generic problem installing an app
 webapps.installError=Gabim në instalimin e zbatimit
