--- a/sq/toolkit/chrome/global/contentAreaCommands.properties
+++ b/sq/toolkit/chrome/global/contentAreaCommands.properties
@@ -4,12 +4,12 @@
 
 #Translated with MozillaTranslator version 5.03
 #Thu Oct 14 12:34:54 EEST 2004
-SaveImageTitle=Ruaje Figurën
-SaveVideoTitle=Ruaje Videon
-SaveAudioTitle=Ruaje Audion
+SaveImageTitle=Ruajeni Figurën
+SaveVideoTitle=Ruajeni Videon
+SaveAudioTitle=Ruajeni Audion
 
 WebPageCompleteFilter=Faqe Web, e plotë
-SaveLinkTitle=Ruaje Si
+SaveLinkTitle=Ruajeni Si
 WebPageXHTMLOnlyFilter=Faqe Web, vetëm XHTML
 WebPageXMLOnlyFilter=Faqe Web, vetëm XML
 
