--- a/sq/browser/chrome/browser/devtools/app-manager.properties
+++ b/sq/browser/chrome/browser/devtools/app-manager.properties
@@ -4,6 +4,7 @@
 
 index.deprecationNotice=Në një version të ardhshëm Përgjegjësi i Zbatimeve do të hiqet.  Projektet tuaja janë migruar në WebIDE.
 index.launchWebIDE=Nise WebIDE-in
+index.readMoreAboutWebIDE=Lexoni Më Tepër
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
@@ -17,7 +18,7 @@ project.installing=Po instalohet…
 project.installed=U instalua!
 validator.nonExistingFolder=Dosja e projektit nuk ekziston
 validator.expectProjectFolder=Dosja e projektit po dilka një kartelë
-validator.wrongManifestFileName=Zbatimet e paketuara lypin një kartelë manifest që në njq dosje rrënjë projekti mund të emërtohet vetëm 'manifest.webapp'
+validator.wrongManifestFileName=Zbatimet e paketuara lypin një kartelë manifest që në një dosje rrënjë projekti mund të emërtohet vetëm 'manifest.webapp'
 validator.invalidManifestURL=URL e pavlefshme manifesti '%S'
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
