--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -209,7 +209,7 @@ call_progress_ringing_description=Po i bihet ziles…
 
 peer_ended_conversation2=Personi që po thirrej i dha fund bashkëbisedimit.
 conversation_has_ended=Bashkëbisedimi juaj përfundoi.
-restart_call=Rihyni
+restart_call=Rifillojeni
 
 generic_failure_title=Diç shkoi ters.
 generic_failure_with_reason2=Mund të riprovoni, ose të dërgoni me email një lidhje që të lidheni më vonë.
