--- a/sq/browser/chrome/browser/places/places.properties
+++ b/sq/browser/chrome/browser/places/places.properties
@@ -25,7 +25,7 @@ load-js-data-url-error=Për arsye sigurie, javascript apo url-ë të dhënash nu
 noTitle=(pa titull)
 
 
-bookmarksMenuEmptyFolder=(Bosh)
+bookmarksMenuEmptyFolder=(E zbrazët)
 
 # LOCALIZATION NOTE (bookmarksBackupFilename) :
 # %S will be replaced by the current date in ISO 8601 format, YYYY-MM-DD.
@@ -34,7 +34,7 @@ bookmarksMenuEmptyFolder=(Bosh)
 # en-US value if you have to use non-ascii characters.
 bookmarksBackupTitle=Emër kartele kopjeruajtjeje faqerojtësish
 
-bookmarksRestoreAlertTitle=Rikthe Faqerojtësit
+bookmarksRestoreAlertTitle=Riktheni Faqerojtësit
 bookmarksRestoreAlert=Në këtë mënyrë do të zëvendësohen tërë faqerojtësit tuaj të tanishëm me ata të kopjeruajtjes. Jeni i sigurt?
 bookmarksRestoreTitle=Përzgjidhni një kopjeruajtje faqerojtësish
 
@@ -74,8 +74,8 @@ tabs.openWarningMultipleBranded=Jeni duke hapur %S skeda.  Kjo mund të ngadalë
 tabs.openButtonMultiple=Hapi skedat
 tabs.openWarningPromptMeBranded=Njoftomë kur hapja e skedave të shumta mund të ngadalësojë %S-in
 
-SelectImport=Importo Kartelë Faqerojtësish
-EnterExport=Eksport Kartelë Faqerojtësish
+SelectImport=Importoni Kartelë Faqerojtësish
+EnterExport=Eksportoni Kartelë Faqerojtësish
 
 detailsPane.noItems=Pa objekte
 # LOCALIZATION NOTE (detailsPane.itemsCountLabel): Semi-colon list of plural forms.
