--- a/sq/dom/chrome/security/csp.properties
+++ b/sq/dom/chrome/security/csp.properties
@@ -111,7 +111,7 @@ intersectingSourceWithUndefinedHost = pleksje burimi me strehë të papërcaktua
 intersectingSourcesWithUndefinedHosts = pleksje e dy burimeve me strehë të papërcaktuara: %1$S and %2$S
 # LOCALIZATION NOTE (duplicateDirective):
 # %1$S is the name of the duplicate directive
-duplicateDirective = U kapën udhëzime %1$S të përsëritura.  Hiq të parin, krejt të tjerët do të shpërfillen.
+duplicateDirective = U kapën udhëzime %1$S të përsëdytura.  Hiq të parin, krejt të tjerët do të shpërfillen.
 # LOCALIZATION NOTE (ignoringUnknownOption):
 # %1$S is the option that could not be understood
 ignoringUnknownOption = Po shpërfillet mundësia e panjohur %1$S
