--- a/sq/toolkit/chrome/global/charsetMenu.properties
+++ b/sq/toolkit/chrome/global/charsetMenu.properties
@@ -1,3 +1,7 @@
+gb18030
+gbk
+gbk.key
+
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -68,11 +72,6 @@ ISO-8859-2       = Europiane Qendrore (ISO)
 # gbk.bis.key never appears together with gbk.key and, hence, can be the same.
 gbk.bis.key      =          T
 gbk.bis          = Kineze, Të thjeshtuara
-# The strings gbk.key, gbk and gb18030 are no longer used but are retained
-# in order to enable backout after string freeze, just in case.
-gbk.key          =          T
-gbk              = Kineze, Të thjeshtuara (GBK)
-gb18030          = Kineze, Të thjeshtuara (GB18030)
 
 # Chinese, Traditional
 Big5.key         =          z
