[pt-BR] update from Pootle (mobile)

--- a/pt-BR/mobile/android/chrome/browser.properties
+++ b/pt-BR/mobile/android/chrome/browser.properties
@@ -322,6 +322,8 @@ remoteNotificationGenericName=Aplicativo
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Conectando-se à porta %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=Abrir
