[S] browser: Bug 1056923 - Add WebIDE launch button

--- a/it/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/it/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -57,5 +57,6 @@ panic-button.label = Dimentica
 panic-button.tooltiptext = Elimina alcune informazioni dalla cronologia di navigazione
 web-apps-button.label = App
 web-apps-button.tooltiptext = Scopri nuove app
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Apri WebIDE
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Apri WebIDE (%S)
+
