Bug 1081322: add string for new contacts phone number editing

--- a/nl/browser/chrome/browser/loop/loop.properties
+++ b/nl/browser/chrome/browser/loop/loop.properties
@@ -98,6 +98,10 @@ new_contact_button=Nieuw contact
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Naam
 new_contact_email_placeholder=E-mailadres
+new_contact_phone_placeholder=Firefox OS-telefoon
+
+contacts_blocked_contacts=Geblokkeerde contacten
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -187,6 +191,7 @@ initiate_call_button_label2=Klaar om uw gesprek te beginnen?
 incoming_call_title2=Gespreksaanvraag
 incoming_call_accept_button=Accepteren
 incoming_call_accept_audio_only_tooltip=Accepteren met geluid
+incoming_call_accept_audio_video_tooltip=Accepteren met video
 incoming_call_cancel_button=Annuleren
 incoming_call_cancel_and_block_button=Annuleren en blokkeren
 incoming_call_block_button=Blokkeren
@@ -295,8 +300,11 @@ tour_label=Tour
 rooms_default_room_name_template=Gesprek {{conversationLabel}}
 rooms_leave_button_label=Verlaten
 rooms_list_copy_url_tooltip=Koppeling kopiëren
-## LOCALIZATION NOTE (rooms_list_current_conversations): We prefer to have no
-## number in the string, but if you need it for your language please use {{num}}.
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
 rooms_list_current_conversations=Lopende gesprekken;Lopende gesprekkken
 rooms_list_delete_tooltip=Gesprek verwijderen
 rooms_list_deleteConfirmation_label=Weet u het zeker?
