[S] devtools: Bug 1086492 - Disable tilt for E10S

--- a/it/browser/chrome/browser/devtools/gclicommands.properties
+++ b/it/browser/chrome/browser/devtools/gclicommands.properties
@@ -4,6 +4,7 @@
 
 helpDesc = Ottieni aiuto sui comandi disponibili
 helpAvailable = Comandi disponibili
+notAvailableInE10S = Il comando “%1$S” non è disponibile in modalità multiprocesso (E10S)
 consoleDesc = Comandi per gestire la console
 consoleManual = Filtra, svuota o chiudi la console web
 consoleclearDesc = Svuota la console
