--- a/de/toolkit/chrome/global/resetProfile.properties
+++ b/de/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Sie haben %S lange nicht mehr genutzt. Soll jetzt aufgeräumt werden, damit Sie ein Benutzererlebnis wie am ersten Tag erfahren? Übrigens, willkommen zurück!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=%S zurücksetzen…
-resetProfile.resetButton.accesskey=z
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=%S restaurieren…
+refreshProfile.resetButton.accesskey=r
