[es-MX] update from Pootle (firefox)

--- a/es-MX/dom/chrome/accessibility/AccessFu.properties
+++ b/es-MX/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    presionado
 stateExpanded    =    expandido
 stateCollapsed   =    colapsado
 stateUnavailable =    no disponible
+stateReadonly    =    sólo lectura
 stateRequired    =    requerido
 stateTraversed   =    visitado
 stateHasPopup    =    tiene ventana emergente
