[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -521,6 +521,7 @@ getUserMedia.sharingMenuCameraMicrophone = %S (câmera e microfone)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (câmera, microfone e aplicativo)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (câmera, microfone e tela)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (câmera, microfone e janela)
+getUserMedia.sharingMenuCameraApplication = %S (câmera e aplicativo)
 getUserMedia.sharingMenuMicrophoneApplication = %S (microfone e aplicativo)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microfone e tela)
 getUserMedia.sharingMenuMicrophoneWindow = %S (microfone e janela)
@@ -544,3 +545,4 @@ customizeTips.tip0.learnMore = Saiba mais
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
 appmenu.restartBrowserButton.label = Reiniciar o %S
+appmenu.downloadUpdateButton.label = Receber atualização
