--- a/pt-BR/dom/chrome/accessibility/AccessFu.properties
+++ b/pt-BR/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    pressionado
 stateExpanded    =    subitens abertos
 stateCollapsed   =    subitens ocultos
 stateUnavailable =    indisponível
+stateReadonly    =    somente leitura
 stateRequired    =    obrigatório
 stateTraversed   =    visitado
 stateHasPopup    =    tem popup
