[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,6 +97,7 @@ quit-button.tooltiptext.linux2 = Yeka %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Yeka %1$S (%2$S)
 
+loop-call-button2.label = Qala incoko
 
 
 panic-button.label = Ulibele
