--- a/xh/browser/chrome/browser/devtools/webide.properties
+++ b/xh/browser/chrome/browser/devtools/webide.properties
@@ -7,6 +7,7 @@
 
 
 
+notification_showTroubleShooting_label=Ukusombulula ingxaki
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
