--- a/xh/browser/chrome/browser/downloads/downloads.properties
+++ b/xh/browser/chrome/browser/downloads/downloads.properties
@@ -63,6 +63,7 @@ unblockTypePotentiallyUnwanted=Le fayile, izenza njengesikhupheli esiluncedo, iz
 unblockTypeUncommon=Le fayile ikhutshelwe kwiwebhusayithi engaqhelekanga nesenokuba kwaye isenokungakhuseleki ukuba ingavulwa
 unblockTip=Ungakhangela esinye isibonelelo sokukhuphela okanye ukukhuphela ifayile kwakhona ngelinye ixesha\u0020
 unblockButtonContinue=Yivule noba kunjalo
+unblockButtonCancel=Ndigcine ndikhuselekile
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
