--- a/xh/browser/chrome/browser/loop/loop.properties
+++ b/xh/browser/chrome/browser/loop/loop.properties
@@ -6,11 +6,14 @@
 
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
+clientShortname2=Molo Firefox
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Joyina incoko
 
 share_link_header_text=Yabelana ngeli khonkco ukumema umntu ukuba athethe:
+invite_header_text=Mema omnye umntu akujiyine.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -58,10 +61,13 @@ problem_accessing_account=Kubekho ingxaki yokufumaneka kwe-akhawunti yakho
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Phinda uzame
 
+share_email_subject4={{clientShortname}} — Joyina incoko
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body4=Molo! \n \n Ndijoyina kwincoko yevidiyo usebenzisa {{clientShortname}}: \n \n Awunalo ukhuphelo okanye fakela nantoni na. Kopa nje uncamathisele le URL kwibhrawza yakho: \n \n {{callUrl}} \n \n Ukuba uyafuna, ungafunda ngakumbi malunga {{clientShortname}} ku {{learnMoreUrl}} \n \n Ndiza kuthetha nawe kwakamsinya!
 share_button=Imeyili
 copy_url_button=Kopa
+copy_url_button2=Kopa ikhonkco
 copied_url_button=Ikopiwe
 
 panel_footer_signin_or_signup_link=Sayina ungene okanye usayino\u0020
@@ -89,6 +95,7 @@ new_contact_button=Abatsha Oqhagamshelana Nabo
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Igama
 new_contact_email_placeholder=Imeyili
+new_contact_phone_placeholder=I-Firefox OS Phone
 
 
 ## LOCALIZATION NOTE (add_contact_button):
@@ -251,6 +258,7 @@ legal_text_privacy = Isaziso sabucala
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
+powered_by_beforeLogo=Iqhutywa ngu
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Ibe njani incoko yakho?
@@ -278,13 +286,27 @@ feedback_rejoin_button=Phinda ujoyine
 feedback_report_user_button=Xela umsebenzisi
 
 help_label=Uncedo
+tour_label=Ukhenketho
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Incoko {{conversationLabel}}
 rooms_leave_button_label=Hamba
+rooms_list_copy_url_tooltip=Kopa ikhonkco
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=Incoko yangoku;Iincoko zangoku
+rooms_list_delete_tooltip=Cima incoko
 rooms_list_deleteConfirmation_label=Uqinisekile?
+rooms_list_no_current_conversations=Akukho zincoko ngoku
+rooms_name_this_room_label=Thiya le ncoko
+rooms_new_room_button_label=Qala incoko
+rooms_only_occupant_label=Ungowokuqala apha.
+rooms_panel_title=Khetha incoko okanye qalisa entsha
+rooms_room_full_label=Sele kukho abantu ababini kule ncoko.
+rooms_room_full_call_to_action_nonFx_label=Khuphela {{brandShortname}} ukuqalisa eyakho
+rooms_room_full_call_to_action_label=Funda ngakumbi malunga {{clientShortname}} »
+rooms_room_joined_label=Umntu othile ujoyine incoko!
