--- a/xh/browser/chrome/browser/places/places.properties
+++ b/xh/browser/chrome/browser/places/places.properties
@@ -84,6 +84,7 @@ tagResultLabel=Ithegi
 bookmarkResultLabel=Isalathisi esiphawulayo
 switchtabResultLabel=Ithebhu
 keywordResultLabel=Igama eliphambili
+searchengineResultLabel=Khangela
 
 
 # LOCALIZATION NOTE (lockPrompt.text)
