--- a/xh/dom/chrome/accessibility/AccessFu.properties
+++ b/xh/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    cinezelweyo
 stateExpanded    =    yandisiweyo
 stateCollapsed   =    idilikile
 stateUnavailable =    ayifumaneki
+stateReadonly    =    funda kuphela
 stateRequired    =    funekayo
 stateTraversed   =    tyelelweyo
 stateHasPopup    =    inezivelelayo
