--- a/xh/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/xh/browser/chrome/browser/devtools/appcacheutils.properties
@@ -15,32 +15,40 @@
 # documentation on web development on the web.
 
 # LOCALIZATION NOTE (noManifest): the specified page has no cache manifest.
+noManifest=Indawo yolawulo ayinayo i-manifest.
 
 # LOCALIZATION NOTE (notUTF8): the associated cache manifest has a character
 # encoding that is not UTF-8. Parameters: %S is the current encoding.
+notUTF8=I-Manifest unophawu loku-enkhowuda kwe-%S. I-Manifests kufuneka ibenophawu loku-emkhowuda oluthi-utf-8.
 
 # LOCALIZATION NOTE (badMimeType): the associated cache manifest has a
 # mimetype that is not text/cache-manifest. Parameters: %S is the current
 # mimetype.
+badMimeType=I-Manifest ine-mimetype ye-%S. I-Manifests kufuneka ibe nesiqendu se-mimetyp/cache-manifest.
 
 # LOCALIZATION NOTE (duplicateURI): the associated cache manifest references
 # the same URI from multiple locations. Parameters: %1$S is the URI, %2$S is a
 # list of references to this URI.
+duplicateURI=URI %1$S walathiswe kwiindawo ezininzi. Oku akuvumelekanga: %2$S.
 
 # LOCALIZATION NOTE (networkBlocksURI, fallbackBlocksURI): the associated
 # cache manifest references the same URI in the NETWORK (or FALLBACK) section
 # as it does in other sections. Parameters: %1$S is the line number, %2$S is
 # the resource name, %3$S is the line number, %4$S is the resource name, %5$S
 # is the section name.
+networkBlocksURI=Umgca wecandelo leNETHIWEKHI %1$S (%2$S) uthintela i-caching yomgca %3$S (%4$S) kwi %5$S candelo.
+fallbackBlocksURI=Umgca wecandelo le-FALLBACK %1$S (%2$S) ithintela i-caching yomgca %3$S (%4$S) kwi %5$S candelo.
 
 # LOCALIZATION NOTE (fileChangedButNotManifest): the associated cache manifest
 # references a URI that has a file modified after the cache manifest.
 # Parameters: %1$S is the resource name, %2$S is the cache manifest, %3$S is
 # the line number.
+fileChangedButNotManifest=Ifiyile %1$S yayilungiswe emva kwe-%2$S. Ngaphandle kokuba isiqendu kwifayile ye-manifest itshintshe inguqulelo e-cached iza kusetyenziswa endaweni yokuba isemgceni %3$S.
 
 # LOCALIZATION NOTE (cacheControlNoStore): the specified page has a header
 # preventing caching or storing information. Parameters: %1$S is the resource
 # name, %2$S is the line number.
+cacheControlNoStore=%1$S ineseti ye-cache-control ukuya kwi-no-store. Oku kuza kuthintela i-cache ye-aplikheshini ekubeni igcine ifayile emgceni %2$S.
 
 # LOCALIZATION NOTE (notAvailable): the specified resource is not available.
 # Parameters: %1$S is the resource name, %2$S is the line number.
