--- a/xh/toolkit/chrome/global/resetProfile.properties
+++ b/xh/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=Kukhangeleka ngathi akukhange uyiqalise %S kangangexesha elithile. Ingaba ufuna ukuyicoca ukuze ufumane amava afreshi namatsha? Singakhange silibale, siyakwamkela kwakhona!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Seta kwakhona %S…
+refreshProfile.resetButton.accesskey=e
