[ta] update from Pootle (mobile)

--- a/ta/mobile/android/chrome/browser.properties
+++ b/ta/mobile/android/chrome/browser.properties
@@ -323,7 +323,9 @@ remoteNotificationGenericName=பயன்பாடு
 # the remote debugger server is listening.
 remoteNotificationMessage=%S முனையம் கவனிக்கப்படுகிறது
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=%S க்காக வழுநீக்கத்தைச் செயல்படுத்து
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=தொலைநிலை வழுநீக்கத்தை செயல்படுத்த தொடு
 
 # Helper apps
 helperapps.open=திற
