--- a/ta/mobile/android/chrome/handling.properties
+++ b/ta/mobile/android/chrome/handling.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+download.blocked=கோப்பினை இறக்க இயலவில்லை
 protocol.failed=இந்த தொடுப்பை திறக்க எந்த பயன்பாட்டையும் கண்டுபிடிக்க முடியவில்லை
 # A very short string shown in the button toast when no application can open the url
 protocol.toast.search=தேடு
