[xh] update from Pootle (mobile)

--- a/xh/mobile/android/chrome/browser.properties
+++ b/xh/mobile/android/chrome/browser.properties
@@ -323,7 +323,9 @@ remoteNotificationGenericName=I-app
 # the remote debugger server is listening.
 remoteNotificationMessage=Ukumamela kumngxuma wokufaka %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Vula ukususa ibug uku %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Cofa ukuvula isisusi bug esikude
 
 # Helper apps
 helperapps.open=Vula
