--- a/xh/mobile/android/chrome/webapp.properties
+++ b/xh/mobile/android/chrome/webapp.properties
@@ -56,3 +56,4 @@ retrievalFailedTitle=#1 uhlaziyo aluphumelelanga;#1 uhlaziyo aluphumelelanga
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Ayiphumelelanga ukubuyisela uhlaziyo lwe-%1$S;Ayiphumelelanga ukubuyisela uhlaziyo lwe-%1$S
 
+webappsDisabled=ukufakela ii-app kwenziwe akwasebenza
