--- a/sk/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sk/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=Pomocník pre dostupné príkazy
 # explain the contents of the command help table.
 helpAvailable=Dostupné príkazy
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Príkaz '%1$S' nie je dostupný v režime viacerých procesov (E10S)
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Príkazy na ovládanie konzoly
